# ilastik-backend

./: CMakeLists.txt  Dockerfile  Readme.md  playground.cpp  request_example.json
cmake_extensions/: FindVIGRA.cmake
conda-recipe/: build.sh  meta.yaml
include/: types.h
include/flowgraph/: jobdata.h  multiinoutnode.h
include/ilastik-backend/: types.h
include/ilastik-backend/flowgraph/: jobdata.h  multiinoutnode.h
include/ilastik-backend/operators/: baseoperator.h  feature_computation_operator.h  hdf5_output_operator.h  random_forest_prediction_operator.h  random_forest_training_operator.h
include/ilastik-backend/tasks/: pixelclassification.h
include/ilastik-backend/utils/: blocking.h  feature_calculator.h  random_forest_reader.h
include/operators/: baseoperator.h
python/: CMakeLists.txt  ilastikbackend.cpp  pyblocking.cpp  pyblocking.h  pypixelclassification.cpp  pypixelclassification.h  vigraconverter.h
python_watcher/: test.py
services/: Readme.md  configurePCWorkflow.py  dataproviderservice.py  datatransferperformancetester.py  extractLog.py  ilastikgateway.py  pixelclassificationservice.py  runServices.py  startAwsClusterIlastik.py  thresholdingservice.py  volumina_viewer.py
services/pixelclassificationservice/: service.py  voxels_nddata_codec.py
services/test/: pc.ilp  raw.h5
services/utils/: featurecomputer.py  queues.py  redisloghandler.py  registry.py  servicehelper.py  voxels_nddata_codec.py
src/flowgraph/: multiinoutnode.cpp
src/util/: random_forest_loader.cpp
